--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/palitra.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Продажа декоративного камня, мраморной крошки и гальки в Ростове. Широкий ассортимент, выгодные цены, быстрая доставка. ☎ +7 (989) 421-18-18" />
+    <meta name="description" content="Продажа декоративного камня, мраморной крошки и гальки в Ростове. Широкий ассортимент, выгодные цены, быстрая доставка. +7 (989) 421-18-18" />
     <meta property="og:title" content="Палитра камня | Декоративный камень в Ростове" />
     <meta property="og:description" content="Продажа декоративного камня, мраморной крошки и гальки в Ростове. Широкий ассортимент, выгодные цены, быстрая доставка." />
     <meta property="og:type" content="website" />
